--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,7 @@ x display tags in alphabetical order
 x typing letters jumps to tag (improve more?)
   undo
   save last window size
+  display items in random order / time added order
 
 
 --debt--
@@ -39,10 +40,12 @@ x drag scrollbar position from where clicked (instead of always jumping below mo
   crash sometimes when arrowing in VIEW and image hasn't loaded yet (confirmed)
   disable text selection when typing in text box
   crash on shrink-all to desktop?
+  bug when deleting unused tags? look into it (example: aabbcc, etc tags)
 
 
 --polish--
 x consistent name
+  (still not super happy with name, consider others eg "vault stacks")
   loading splash screen for opening larger files? (load thumb first if slow?)
   pretty buttons / ui
   controls displayed somewhere
@@ -56,6 +59,8 @@ x consistent name
   navigate active tag with arrows? / better tag selection
   list tags on open item (right now only in debug view)
   fit tags on screen better? (alternate layouts?)
+  confirm before removing all tags on an item 
+  (and/or better visual difference between selecting view tags and item tags)
  
 
 --would be nice--
